# MLZ

./: CMakeLists.txt  IMBMPImageFileFormat.cpp  IMImageConverter.cpp  IMImageFile.cpp  IMImageFileFormat.cpp  IMImageResizer.cpp  IMImageView.cpp  IMLibConfig.cmake  IMLibTypes.cpp  IMMotionAnalyser.cpp  IMTIFFImageFileFormat.cpp  IMVideoClient.cpp  IMVideoServer.cpp  IMView.cpp  MAMatrix.cpp  PHCamera.cpp  PHConvexHull.cpp  PHMesh.cpp  PHOrientation.cpp  PHQuickHull.cpp  README.md  _impara01.txt
Dithering/: main.cpp
IMLib/: IMBMPImageFileFormat.h  IMImageConverter.h  IMImageFile.h  IMImageFileFormat.h  IMImageResizer.h  IMImageView.h  IMLib.h  IMLibTypes.h  IMMotionAnalyser.h  IMTIFFImageFileFormat.h  IMVideoClient.h  IMVideoServer.h  IMView.h  MAMatrix.h  PHCamera.h  PHConvexHull.h  PHMesh.h  PHOrientation.h  PHQuickHull.h
MLZ/: CMakeLists.txt  graphBuilder.cpp  main.cpp
Tests/QuickHull/: main.cpp
ZFlow/: main.cpp
mac/IMLib/IMLib.xcodeproj/: project.pbxproj
mac/IMLib/IMLib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
mac/IMLib/IMLib.xcodeproj/project.xcworkspace/xcuserdata/vladimirknyaz.xcuserdatad/: UserInterfaceState.xcuserstate
mac/IMLib/IMLib.xcodeproj/xcuserdata/vladimirknyaz.xcuserdatad/xcschemes/: xcschememanagement.plist
